# serverless-duckdb

./: README.md  pyproject.toml
azure_functions/: local.settings.json.example
azure_functions/driver/: __init__.py  function.json
azure_functions/executor/: __init__.py  function.json
azure_functions/shared_packages/comboi/: checkpoint.py  cli.py  runner.py
azure_functions/shared_packages/comboi/connectors/: __init__.py
azure_functions/shared_packages/comboi/pipeline/: executor.py  monitoring.py  queue.py
azure_functions/shared_packages/comboi/pipeline/stages/: __init__.py  bronze.py
configs/: default.yml  initial.yml  transformations.yml
contracts/: README.md  customers_clean.yml  orders_clean.yml
src/comboi/: __init__.py  bruin_quality.py  bruin_runner.py  cli.py  config.py  logging.py  runner.py  secrets.py
src/comboi/connectors/: azure_sql.py  postgres.py
src/comboi/contracts/: __init__.py  contract_loader.py  contract_validator.py  quality_validator.py  schema_validator.py  sla_validator.py
src/comboi/io/: adls.py
src/comboi/pipeline/: driver.py  executor.py  monitoring.py  queue.py
src/comboi/pipeline/stages/: bronze.py  gold.py  silver.py
src/ducksrvls/connectors/: azure_sql.py
terraform/: README.md  main.tf  outputs.tf
tools/: embed_comboi.py
